# advent_calendar

./: main.py  pyproject.toml
assets/: create_folders.sh
static/: style.css
templates/: index.html
