[tool.poetry]
name = "advent_calendar"
version = "0.1.0"
description = ""
authors = ["Sebastian Lehrack <sebastian.lehrack@cognostics.de>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

